foundation-objs/main/default/objects/Case/fields/Account_Collection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Collection_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Collection Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Collection_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>