foundation-objs/main/default/objects/Case/fields/Account_Collection_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Collection_Manager_Email__c</fullName>
    <label>Account Collection Manager Email</label>
    <type>Email</type>
</CustomField>