foundation-objs/main/default/objects/Case/fields/Actual_PRD_UX_Completion_Date_Jira__c.field-meta.xml
<CustomField>
    <fullName>Actual_PRD_UX_Completion_Date_Jira__c</fullName>
    <label>Actual PRD/UX Completion Date(Jira)</label>
    <type>DateTime</type>
</CustomField>