foundation-objs/main/default/objects/Case/fields/Actual_Release_Date_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date_JIRA__c</fullName>
    <label>Actual Release Date(JIRA)</label>
    <type>DateTime</type>
</CustomField>