foundation-objs/main/default/objects/Case/fields/Case_TAT__c.field-meta.xml
<CustomField>
    <fullName>Case_TAT__c</fullName>
    <formula>if(if(ISPICKVAL(Status,&quot;Closed&quot;), ClosedDate - CreatedDate ,0)&lt;0,0,if( ISPICKVAL(Status,&quot;Closed&quot;), ClosedDate - CreatedDate ,0))</formula>
    <label>Case TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>