foundation-objs/main/default/objects/Case/fields/Case_Tracker_Counter__c.field-meta.xml
<CustomField>
    <fullName>Case_Tracker_Counter__c</fullName>
    <label>Case Tracker Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>