foundation-objs/main/default/objects/Case/fields/Developer_Comment_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comment_JIRA__c</fullName>
    <label>Developer Comment(JIRA)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>