foundation-objs/main/default/objects/Case/fields/Is_Case_Tracker_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Case_Tracker_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Case Tracker Used?</label>
    <type>Checkbox</type>
</CustomField>