foundation-objs/main/default/objects/Case/fields/Issue_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_1__c</fullName>
    <label>Issue Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>E-Way Bill</fullName>
            </value>
            <value>
                <fullName>26QB</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Receipts</fullName>
            </value>
            <value>
                <fullName>Add challan on traces</fullName>
            </value>
            <value>
                <fullName>Annexure1</fullName>
            </value>
            <value>
                <fullName>Annexure2</fullName>
            </value>
            <value>
                <fullName>Billing/Fling Software (pricing)</fullName>
            </value>
            <value>
                <fullName>Billing Software (pricing)</fullName>
            </value>
            <value>
                <fullName>Business/Partnership Proposal</fullName>
            </value>
            <value>
                <fullName>Callback from KAM</fullName>
            </value>
            <value>
                <fullName>callback request</fullName>
            </value>
            <value>
                <fullName>careers</fullName>
            </value>
            <value>
                <fullName>Challan delete issue</fullName>
            </value>
            <value>
                <fullName>Clearone App related</fullName>
            </value>
            <value>
                <fullName>cleartax portal</fullName>
            </value>
            <value>
                <fullName>connectors</fullName>
            </value>
            <value>
                <fullName>CT Account Mgmt</fullName>
            </value>
            <value>
                <fullName>Data_Preparation</fullName>
            </value>
            <value>
                <fullName>Data Ingestion</fullName>
            </value>
            <value>
                <fullName>Deductee mismatch</fullName>
            </value>
            <value>
                <fullName>Deductions</fullName>
            </value>
            <value>
                <fullName>Desktop_App</fullName>
            </value>
            <value>
                <fullName>desktop app</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>E-Filing</fullName>
            </value>
            <value>
                <fullName>E-filing:; No Query</fullName>
            </value>
            <value>
                <fullName>Elaborate</fullName>
            </value>
            <value>
                <fullName>EWB Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>