foundation-objs/main/default/objects/Case/fields/Issue_Type_1_New__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_1_New__c</fullName>
    <label>Issue Type - 1 (New)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Products_Available__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Filing</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>GSTN Interaction</fullName>
            </value>
            <value>
                <fullName>Connectors/Integration</fullName>
            </value>
            <value>
                <fullName>Platform issues</fullName>
            </value>
            <value>
                <fullName>Software downtime</fullName>
            </value>
            <value>
                <fullName>Non Enterprise Inquiries</fullName>
            </value>
            <value>
                <fullName>Sales / CSM Inquiries</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IRN/EWB generation</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Sales enquiry</fullName>
            </value>
            <value>
                <fullName>Custom Print template</fullName>
            </value>
            <value>
                <fullName>IRN/EWB Cancellations</fullName>
            </value>
            <value>
                <fullName>Device Registration</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Document Summary</fullName>
            </value>
            <value>
                <fullName>Filters</fullName>
            </value>
            <value>
                <fullName>Ingestion</fullName>
            </value>
            <value>
                <fullName>Invoice download</fullName>
            </value>
            <value>
                <fullName>Invoice Export</fullName>
            </value>
            <value>
                <fullName>Invoice Generation</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Data Ingestion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>