foundation-objs/main/default/objects/Case/fields/Issue_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_2__c</fullName>
    <label>Issue Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>299 Payment issue</fullName>
            </value>
            <value>
                <fullName>2a vs pr</fullName>
            </value>
            <value>
                <fullName>2b vs pr</fullName>
            </value>
            <value>
                <fullName>3b</fullName>
            </value>
            <value>
                <fullName>3B_data_not_reflecting</fullName>
            </value>
            <value>
                <fullName>44AA</fullName>
            </value>
            <value>
                <fullName>44AB</fullName>
            </value>
            <value>
                <fullName>44AD</fullName>
            </value>
            <value>
                <fullName>44ADA</fullName>
            </value>
            <value>
                <fullName>44AE</fullName>
            </value>
            <value>
                <fullName>80C/ 80TTA/ 80G</fullName>
            </value>
            <value>
                <fullName>80D/ 80CCG/ 80E</fullName>
            </value>
            <value>
                <fullName>80DD / 80U</fullName>
            </value>
            <value>
                <fullName>8a vs pr</fullName>
            </value>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>account__business_settings</fullName>
            </value>
            <value>
                <fullName>account__delete_history</fullName>
            </value>
            <value>
                <fullName>account__gstin_settings</fullName>
            </value>
            <value>
                <fullName>account__import_history</fullName>
            </value>
            <value>
                <fullName>account__import_settings</fullName>
            </value>
            <value>
                <fullName>account__invoice_settings</fullName>
            </value>
            <value>
                <fullName>account__licensing</fullName>
            </value>
            <value>
                <fullName>account_gstin_settings</fullName>
            </value>
            <value>
                <fullName>account_settings</fullName>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Receipt</fullName>
            </value>
            <value>
                <fullName>Annexure_1</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Assessment Year Issue</fullName>
            </value>
            <value>
                <fullName>Audit Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>