foundation-objs/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B2B Enterprise</fullName>
            </value>
            <value>
                <fullName>B2C QR code generation</fullName>
            </value>
            <value>
                <fullName>Callback Request</fullName>
            </value>
            <value>
                <fullName>cancellation</fullName>
            </value>
            <value>
                <fullName>Clearone App related</fullName>
            </value>
            <value>
                <fullName>ClearSave</fullName>
            </value>
            <value>
                <fullName>E-Inv 2.0 Webinar Related</fullName>
            </value>
            <value>
                <fullName>E-Invoicing</fullName>
            </value>
            <value>
                <fullName>E-Way Bill</fullName>
            </value>
            <value>
                <fullName>Feature activation request</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Finance Related</fullName>
            </value>
            <value>
                <fullName>Free Support</fullName>
            </value>
            <value>
                <fullName>gst</fullName>
            </value>
            <value>
                <fullName>GST Filing Assistance</fullName>
            </value>
            <value>
                <fullName>GSTIN Verification credit issue</fullName>
            </value>
            <value>
                <fullName>GST Product demo</fullName>
            </value>
            <value>
                <fullName>ingestion issue</fullName>
            </value>
            <value>
                <fullName>Invoice Copy Request</fullName>
            </value>
            <value>
                <fullName>New Returns Related</fullName>
            </value>
            <value>
                <fullName>No action required</fullName>
            </value>
            <value>
                <fullName>Non E-Inv Related</fullName>
            </value>
            <value>
                <fullName>Non Gst Related</fullName>
            </value>
            <value>
                <fullName>other support issues</fullName>
            </value>
            <value>
                <fullName>Product issue - Cleartax end</fullName>
            </value>
            <value>
                <fullName>sales &amp; marketing</fullName>
            </value>
            <value>
                <fullName>Sales Issues</fullName>
            </value>
            <value>
                <fullName>Support Issues</fullName>
            </value>
            <value>
                <fullName>Tax Cloud</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>