foundation-objs/main/default/objects/Case/fields/JIRA_Ticket_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_Created_Date__c</fullName>
    <label>JIRA Ticket Created Date</label>
    <type>DateTime</type>
</CustomField>