foundation-objs/main/default/objects/Case/fields/Jira_URL__c.field-meta.xml
<CustomField>
    <fullName>Jira_URL__c</fullName>
    <label>Jira URL</label>
    <type>Url</type>
</CustomField>