foundation-objs/main/default/objects/Case/fields/L3_Developer_JIRA__c.field-meta.xml
<CustomField>
    <fullName>L3_Developer_JIRA__c</fullName>
    <label>L3 Developer(JIRA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>