foundation-objs/main/default/objects/Case/fields/Planned_Release_Date_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release_Date_JIRA__c</fullName>
    <label>Planned Release Date(JIRA)</label>
    <type>DateTime</type>
</CustomField>