foundation-objs/main/default/objects/Case/fields/QA_Handover_Date_JIRA__c.field-meta.xml
<CustomField>
    <fullName>QA_Handover_Date_JIRA__c</fullName>
    <label>QA Handover Date(JIRA)</label>
    <type>DateTime</type>
</CustomField>