foundation-objs/main/default/objects/Case/fields/QA_Release_Date_JIRA__c.field-meta.xml
<CustomField>
    <fullName>QA_Release_Date_JIRA__c</fullName>
    <label>QA Release Date(JIRA)</label>
    <type>DateTime</type>
</CustomField>