foundation-objs/main/default/objects/Case/fields/SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time__c</fullName>
    <label>SLA Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>