foundation-objs/main/default/objects/Case/fields/SLA_time_calculated__c.field-meta.xml
<CustomField>
    <fullName>SLA_time_calculated__c</fullName>
    <formula>IF(SLA_Time__c=null || SLA_Time__c =&apos;&apos; , &quot;&quot; , IF(CONTAINS( SLA_Time__c ,&quot;-&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01572000000Uzqt&quot;, &quot;violated&quot;,20,20),IMAGE(&quot;/servlet/servlet.FileDownload?file=01572000000V00X&quot;, &quot;warning&quot; ,20,30))+ &quot;  &quot; + SLA_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA time calculated</label>
    <type>Text</type>
</CustomField>