foundation-objs/main/default/objects/Case/fields/SLA_Time_updated_from_Alert__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time_updated_from_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Time updated from Alert</label>
    <type>Checkbox</type>
</CustomField>