foundation-objs/main/default/objects/Case/fields/Status_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Status_JIRA__c</fullName>
    <label>Status(JIRA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>