foundation-objs/main/default/objects/Case/fields/Survey_Question_4__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_4__c</fullName>
    <label>Survey Question 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>