foundation-objs/main/default/objects/Case/fields/Survey_Response_4__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_4__c</fullName>
    <label>Survey Response 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>