foundation-objs/main/default/objects/Case/fields/Tagged_To__c.field-meta.xml
<CustomField>
    <fullName>Tagged_To__c</fullName>
    <label>Tagged To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Type_1_New__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gstr-1</fullName>
            </value>
            <value>
                <fullName>Gstr-3B</fullName>
            </value>
            <value>
                <fullName>Gstr-4</fullName>
            </value>
            <value>
                <fullName>Gstr-9</fullName>
            </value>
            <value>
                <fullName>CMP-08</fullName>
            </value>
            <value>
                <fullName>PMT-06</fullName>
            </value>
            <value>
                <fullName>IFF</fullName>
            </value>
            <value>
                <fullName>ITC-04</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>3B vs. 1 vs. Books</fullName>
            </value>
            <value>
                <fullName>3B vs. 2B vs. Books</fullName>
            </value>
            <value>
                <fullName>3B vs. 2A &amp; 2B</fullName>
            </value>
            <value>
                <fullName>Monthly tax &amp; ITC</fullName>
            </value>
            <value>
                <fullName>Gstr-1 Filed report</fullName>
            </value>
            <value>
                <fullName>Gstr-3B Filed report</fullName>
            </value>
            <value>
                <fullName>Pan level - 3B vs. 1</fullName>
            </value>
            <value>
                <fullName>Pan level - 3B vs. 2A</fullName>
            </value>
            <value>
                <fullName>Pan level - MM2A</fullName>
            </value>
            <value>
                <fullName>Pan level - MM2B</fullName>
            </value>
            <value>
                <fullName>Pan level - Gstr-1</fullName>
            </value>
            <value>
                <fullName>Gstr-1 HSN summary</fullName>
            </value>
            <value>
                <fullName>Gstr-1 rate wise summary</fullName>
            </value>
            <value>
                <fullName>Cash ledger</fullName>
            </value>
            <value>
                <fullName>ITC ledger</fullName>
            </value>
            <value>
                <fullName>ITC offset</fullName>
            </value>
            <value>
                <fullName>Monthly Tax &amp; ITC summary</fullName>
            </value>
            <value>
                <fullName>3B vs. 1 comparison</fullName>
            </value>
            <value>
                <fullName>3B vs. 2A ITC comparison</fullName>
            </value>
            <value>
                <fullName>G9 Table 8 report</fullName>
            </value>
            <value>
                <fullName>G4 Table 4A report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>