foundation-objs/main/default/objects/Case/fields/Updated_in_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_JIRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated in JIRA</label>
    <type>Checkbox</type>
</CustomField>