foundation-objs/main/default/objects/Case/recordTypes/B2B_Enterprise.recordType-meta.xml
<RecordType>
    <fullName>B2B_Enterprise</fullName>
    <active>true</active>
    <businessProcess>B2B Support Process</businessProcess>
    <label>B2B Enterprise</label>
</RecordType>