foundation-objs/main/default/objects/Case/recordTypes/E_Invoicing.recordType-meta.xml
<RecordType>
    <fullName>E_Invoicing</fullName>
    <active>true</active>
    <businessProcess>E invoicing Support Process</businessProcess>
    <label>E Invoicing</label>
</RecordType>