foundation-objs/main/default/objects/Case/recordTypes/International.recordType-meta.xml
<RecordType>
    <fullName>International</fullName>
    <active>true</active>
    <businessProcess>E invoicing Support Process</businessProcess>
    <label>International</label>
</RecordType>